--- a/laravel-blog/public/.htaccess
+++ b/laravel-blog/public/.htaccess
@@ -14,6 +14,9 @@
     RewriteCond %{REQUEST_URI} (.+)/$
     RewriteRule ^ %1 [L,R=301]
 
+    # Locale
+    RedirectMatch "^/(en|de|es)/?(.*)?" "/$2?locale=$1"
+
     # Send Requests To Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
