--- a/laravel-blog/.gitignore
+++ b/laravel-blog/.gitignore
@@ -12,10 +12,7 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 
-#
-composer.lock
-package-lock.json
-
+# assets
 public/css/
 public/js/
 public/mix-manifest.json
