--- a/composer.json
+++ b/composer.json
@@ -2,27 +2,30 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
-        "fakerphp/faker": "^1.14",
-        "fideloper/proxy": "^4.4",
-        "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.12",
-        "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.2",
-        "league/flysystem-aws-s3-v3": "~1.0",
-        "league/flysystem-cached-adapter": "~1.0"
+        "barryvdh/laravel-debugbar": "^v3.6.6",
+        "fakerphp/faker": "^v1.19.0",
+        "fideloper/proxy": "^4.4.1",
+        "fruitcake/laravel-cors": "^v2.0.5",
+        "guzzlehttp/guzzle": "^7.4.1",
+        "laravel/framework": "^v8.82.0",
+        "laravel/tinker": "^v2.7.0",
+        "laravel/ui": "^v3.4.2",
+        "league/flysystem-aws-s3-v3": "^1.0.29",
+        "league/flysystem-cached-adapter": "^1.1.0"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.5",
-        "facade/ignition": "^2.5",
-        "laravel/sail": "^1.0.1",
-        "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "facade/ignition": "^2.17.4",
+        "laravel/sail": "^v1.13.1",
+        "mockery/mockery": "^1.5.0",
+        "nunomaduro/collision": "^v5.11.0",
+        "phpunit/phpunit": "^9.5.13"
     },
     "autoload": {
         "psr-4": {
