--- a/composer.json
+++ b/composer.json
@@ -8,24 +8,24 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
-        "barryvdh/laravel-debugbar": "^v3.6.6",
+        "php": "^8.0",
+        "barryvdh/laravel-debugbar": "^v3.6.7",
         "fakerphp/faker": "^v1.19.0",
         "fideloper/proxy": "^4.4.1",
-        "fruitcake/laravel-cors": "^v2.0.5",
-        "guzzlehttp/guzzle": "^7.4.1",
-        "laravel/framework": "^v8.82.0",
-        "laravel/tinker": "^v2.7.0",
-        "laravel/ui": "^v3.4.2",
+        "fruitcake/laravel-cors": "^v2.2.0",
+        "guzzlehttp/guzzle": "^7.4.2",
+        "laravel/framework": "^v8.83.5",
+        "laravel/tinker": "^v2.7.1",
+        "laravel/ui": "^v3.4.5",
         "league/flysystem-aws-s3-v3": "^1.0.29",
         "league/flysystem-cached-adapter": "^1.1.0"
     },
     "require-dev": {
-        "facade/ignition": "^2.17.4",
-        "laravel/sail": "^v1.13.1",
+        "facade/ignition": "^2.17.5",
+        "laravel/sail": "^v1.13.7",
         "mockery/mockery": "^1.5.0",
         "nunomaduro/collision": "^v5.11.0",
-        "phpunit/phpunit": "^9.5.13"
+        "phpunit/phpunit": "^9.5.19"
     },
     "autoload": {
         "psr-4": {
