--- a/composer.json
+++ b/composer.json
@@ -9,23 +9,23 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
-        "barryvdh/laravel-debugbar": "v3.7.0",
-        "fakerphp/faker": "v1.20.0",
-        "fideloper/proxy": "^4.4.2",
+        "barryvdh/laravel-debugbar": "^v3.7.0",
+        "fakerphp/faker": "^v1.21.0",
+        "fideloper/proxy": "^4.4.0",
         "fruitcake/laravel-cors": "^v2.2.0",
         "guzzlehttp/guzzle": "^7.5.0",
-        "laravel/framework": "v8.83.26",
-        "laravel/tinker": "v2.7.3",
-        "laravel/ui": "v3.4.6",
-        "league/flysystem-aws-s3-v3": "^1.0.30",
+        "laravel/framework": "^v8.83.0",
+        "laravel/tinker": "^v2.7.3",
+        "laravel/ui": "^v3.4.0",
+        "league/flysystem-aws-s3-v3": "^1.0.0",
         "league/flysystem-cached-adapter": "^1.1.0"
     },
     "require-dev": {
-        "facade/ignition": "^2.17.6",
-        "laravel/sail": "v1.16.2",
+        "facade/ignition": "^2.17.0",
+        "laravel/sail": "^v1.17.0",
         "mockery/mockery": "^1.5.1",
         "nunomaduro/collision": "^v5.11.0",
-        "phpunit/phpunit": "^9.5.26"
+        "phpunit/phpunit": "^9.5.0"
     },
     "autoload": {
         "psr-4": {
