--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.0",
+        "php": "^7.4|^8.0",
         "barryvdh/laravel-debugbar": "^v3.7.0",
         "fakerphp/faker": "^v1.21.0",
         "fideloper/proxy": "^4.4.2",
